--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="keywords" content="web developer, developer, Jess Brisson">
+    <meta name="keywords" content="Jess Brisson, web developer, Wisconsin developer">
     <meta name="description" content="A single page site about Jess Brisson, a web developer with the goods. Find out more about him here.">
     <meta name="robots" content="index,follow">
     <title>Jess Brisson - Web Developer | Bringing web goodness since 2012</title>
