--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
               <li>JavaScript</li>
             </ul>
             <ul class="tools-i-use">
-              <li><a href="https://facebook.github.io/react/">ReactJS</a></li>
+              <li><a href="https://facebook.github.io/react/" target="_blank">ReactJS</a></li>
               <li><a href="https://git-scm.com/" target="_blank">Git</a></li>
               <li><a href="http://sass-lang.com/" target="_blank">Sass</a></li>
               <li><a href="https://jquery.com/" target="_blank">jQuery</a></li>
