finally making modifications to my personal site -- added animation for words under my head

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <img class="my-pic" src="images/min/my-pic.jpg">
         <div class="half">
           <div class="half-container">
-            <h3>Simplicity first.</h3>
+            <h3><span class="simplicity"></span> <span class="first">first.</span></h3>
             <ul class="clearfix">
               <li>Development</li>
               <li>SEO</li>
@@ -56,7 +56,6 @@
         </div>
       </section>
     </main>
-    <script src="scripts/jquery-3.1.1.min.js"></script>
     <script src="scripts/super.js"></script>
   </body>
 </html>
