Updated date as I didn't start web development until 2013! oops. Also shortened title

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="keywords" content="Jess Brisson, web developer, Wisconsin developer">
     <meta name="description" content="A single page site about Jess Brisson, a web developer with the goods. Find out more about him here.">
     <meta name="robots" content="index,follow">
-    <title>Jess Brisson - Web Developer | Bringing web goodness since 2012</title>
+    <title>Jess Brisson | Bringing web goodness since 2013</title>
     <link rel="stylesheet" type="text/css" href="stylish.css">
     <link href="https://fonts.googleapis.com/css?family=Raleway:100,300,400,900" rel="stylesheet">
   </head>
