--- a/index.html
+++ b/index.html
@@ -8,54 +8,15 @@
     <meta name="robots" content="index,follow">
     <title>Jess Brisson | Bringing web goodness since 2013</title>
     <link rel="stylesheet" type="text/css" href="stylish.css">
-    <link href="https://fonts.googleapis.com/css?family=Raleway:100,300,400,900" rel="stylesheet">
   </head>
   <body>
     <main>
-      <header>
-        <div>
-          <h1>Jess Brisson</h1>
-          <h2><strong>A Developer of Higher Magnitudes</strong></h2>
-          <p><script>document.write('<'+'a'+' '+'h'+'r'+'e'+'f'+'='+"'"+'m'+'a'+'i'+'l'+'&'+'#'+'1'+'1'+'6'+';'+'o'+'&'+'#'+'5'+'8'+';'+
-'j'+'e'+'&'+'#'+'1'+'1'+'5'+';'+'s'+'&'+'#'+'9'+'8'+';'+'r'+'&'+'#'+'1'+'0'+'5'+';'+'s'+'s'+'o'+'%'+
-'6'+'E'+'&'+'#'+'6'+'4'+';'+'g'+'%'+'6'+'D'+'&'+'#'+'9'+'7'+';'+'i'+'&'+'#'+'1'+'0'+'8'+';'+'&'+'#'+
-'4'+'6'+';'+'c'+'o'+'&'+'#'+'1'+'0'+'9'+';'+"'"+'>'+'j'+'e'+'s'+'&'+'#'+'1'+'1'+'5'+';'+'b'+'r'+'&'+
-'#'+'1'+'0'+'5'+';'+'s'+'s'+'o'+'n'+'&'+'#'+'6'+'4'+';'+'&'+'#'+'1'+'0'+'3'+';'+'&'+'#'+'1'+'0'+'9'+
-';'+'a'+'i'+'&'+'#'+'1'+'0'+'8'+';'+'&'+'#'+'4'+'6'+';'+'&'+'#'+'9'+'9'+';'+'&'+'#'+'1'+'1'+'1'+';'+
-'m'+'<'+'/'+'a'+'>');</script><noscript>This is where my email should be, but you need to turn on JavaScript first.</noscript></p>
-        </div>
-      </header>
-      <section class="clearfix full">
-        <div class="half">
-          <div class="half-container">
-            <p>Welcome to my fun little planet in the vastness of the internet. I am a developer on a mission; to deliver user experiences at the next level. SEO boosting accessibility, precise design to development, and a new way of thinking web: Simplicity first. <br>That's what I bring.</p>
-          </div>
-        </div>
-        <img class="my-pic" src="images/min/my-pic.jpg">
-        <div class="half">
-          <div class="half-container">
-            <h3><span class="simplicity"></span> <span class="first">first.</span></h3>
-            <ul class="clearfix">
-              <li>Development</li>
-              <li>SEO</li>
-              <li>Advisement</li>
-            </ul>
-            <ul class="tools-i-use">
-              <li>HTML5</li>
-              <li>CSS3</li>
-              <li>JavaScript</li>
-            </ul>
-            <ul class="tools-i-use">
-              <li><a href="https://facebook.github.io/react/" target="_blank">ReactJS</a></li>
-              <li><a href="https://git-scm.com/" target="_blank">Git</a></li>
-              <li><a href="http://sass-lang.com/" target="_blank">Sass</a></li>
-              <li><a href="https://jquery.com/" target="_blank">jQuery</a></li>
-              <li><a href="http://www.php.net/" target="_blank">PHP</a></li>
-            </ul>
-          </div>
-        </div>
-      </section>
+      <div id="cmd-exec"></div>
+      <div id="cmd-input">
+        <span>jesslovescss@github.io:~</span>
+        <input type="text" value="">
+      </div>
     </main>
-    <script src="scripts/super.js"></script>
   </body>
+  <script src="scripts/super.js"></script>
 </html>
