--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="robots" content="index,follow">
     <title>Jess Brisson | Bringing web goodness since 2013</title>
     <link rel="stylesheet" type="text/css" href="stylish.css">
+    <link rel="stylesheet" type="text/css" href="rsnake.css">
   </head>
   <body>
     <main>
@@ -16,7 +17,13 @@
         <span>jesslovescss@github.io:~</span>
         <input type="text" value="">
       </div>
+      <br><br>
+      <div id="rsnake" style="display: none;"></div>
     </main>
   </body>
-  <script src="scripts/super.js"></script>
+  <script crossorigin src="https://unpkg.com/react@16/umd/react.production.min.js"></script>
+  <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js"></script>
+  <script crossorigin src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.26.0/babel.min.js"></script>
+  <script src="./scripts/super.js"></script>
+  <script type="text/babel" src="./scripts/rsnake.js"></script>
 </html>
