--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
       <br><br>
       <div id="rsnake" style="display: none;"></div>
     </main>
-    <script crossorigin src="https://unpkg.com/react@16/umd/react.production.min.js"></script>
-    <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js"></script>
+    <script src="./scripts/react.js"></script>
+    <script crossorigin src="./scripts/react-dom.js"></script>
     <script crossorigin src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.26.0/babel.min.js"></script>
     <script src="./scripts/super.js"></script>
     <script type="text/babel" src="./scripts/rsnake.js"></script>
