update colors, functionality

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="keywords" content="Jess Brisson, web developer, Wisconsin developer">
     <meta name="description" content="A single page site about Jess Brisson, a web developer with the goods. Find out more about him here.">
     <meta name="robots" content="index,follow">
-    <title>Jess Brisson | Bringing web goodness since 2013</title>
+    <title>Jess Brisson | JavaScript/NodeJS | PHP | *nix</title>
     <link rel="stylesheet" type="text/css" href="stylish.css">
     <link rel="stylesheet" type="text/css" href="rsnake.css">
   </head>
@@ -14,8 +14,8 @@
     <main>
       <div id="cmd-exec"></div>
       <div id="cmd-input">
-        <span>jesslovescss@github.io:~</span>
-        <input type="text" value="">
+        <span>jessthedev@github.io:~</span>
+        <input type="text">
       </div>
       <br><br>
       <div id="rsnake" style="display: none;"></div>
