updated styles and resume

--- a/index.html
+++ b/index.html
@@ -7,10 +7,14 @@
     <meta name="description" content="A single page site about Jess Brisson, a web developer with the goods. Find out more about him here.">
     <meta name="robots" content="index,follow">
     <title>Jess Brisson | JavaScript/NodeJS | PHP | *nix</title>
+    <link href="https://fonts.googleapis.com/css?family=Ubuntu:300" rel="stylesheet"> 
     <link rel="stylesheet" type="text/css" href="stylish.css">
     <link rel="stylesheet" type="text/css" href="rsnake.css">
   </head>
   <body>
+    <header>
+      <span id="clock"></span>
+    </header>
     <main>
       <div id="cmd-exec"></div>
       <div id="cmd-input">
