"fixed header content justification"

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="keywords" content="Jess Brisson, web developer, Wisconsin developer">
     <meta name="description" content="A single page site about Jess Brisson, a web developer with the goods. Find out more about him here.">
     <meta name="robots" content="index,follow">
-    <title>Jess Brisson | JavaScript/NodeJS | PHP | *nix</title>
+    <title>Jess Brisson | PHP |JavaScript/NodeJS | *nix</title>
     <link href="https://fonts.googleapis.com/css?family=Ubuntu:300" rel="stylesheet"> 
     <link rel="stylesheet" type="text/css" href="stylish.css">
     <link rel="stylesheet" type="text/css" href="rsnake.css">
