Add main script to babel

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <script src="./scripts/react.js"></script>
     <script crossorigin src="./scripts/react-dom.js"></script>
     <script crossorigin src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.26.0/babel.min.js"></script>
-    <script src="./scripts/super.js"></script>
+    <script type="text/babel" src="./scripts/super.js"></script>
     <script type="text/babel" src="./scripts/rsnake.js"></script>
   </body>
 </html>
