--- a/index.html
+++ b/index.html
@@ -1,33 +1,149 @@
 <!doctype html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="keywords" content="Jess Brisson, web developer, Wisconsin developer">
-    <meta name="description" content="A single page site about Jess Brisson, a web developer with the goods. Find out more about him here.">
-    <meta name="robots" content="index,follow">
-    <title>Jess Brisson | PHP | JavaScript/NodeJS | *nix</title>
-    <link href="https://fonts.googleapis.com/css?family=Ubuntu:300" rel="stylesheet"> 
-    <link rel="stylesheet" type="text/css" href="stylish.css">
-    <link rel="stylesheet" type="text/css" href="rsnake.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="icon" href="/favicon.ico">
+
+    <title>Jess Brisson | PHP | JavaScript | Web Development</title>
+
+    <link href="https://fonts.googleapis.com/css?family=Lato:300,400" rel="stylesheet">
+
+    <!-- Bootstrap core CSS -->
+    <link href="./vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Custom styles for this template -->
+    <link href="./css/main.css" rel="stylesheet">
   </head>
-  <body>
-    <header>
-      <span id="clock"></span>
-    </header>
-    <main>
-      <div id="cmd-exec"></div>
-      <div id="cmd-input">
-        <span>jessthedev@github.io:~</span>
-        <input type="text">
-      </div>
-      <br><br>
-      <div id="rsnake" style="display: none;"></div>
-    </main>
-    <script src="./scripts/react.js"></script>
-    <script crossorigin src="./scripts/react-dom.js"></script>
-    <script crossorigin src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.26.0/babel.min.js"></script>
-    <script type="text/babel" src="./scripts/super.js"></script>
-    <script type="text/babel" src="./scripts/rsnake.js"></script>
+
+  <body class="text-center">
+    <div class="">
+
+      <button class="hmbgr-menu">
+        <span></span>
+      </button>
+
+      <header class="masthead mb-auto">
+        <div class="inner clearfix">
+          <nav class="nav nav-masthead justify-content-center">
+            <a class="nav-link" href="#jb-home">Top</a>
+            <a class="nav-link" href="#jb-about">About</a>
+            <a class="nav-link" href="#jb-services">Services</a>
+            <a class="nav-link" href="#jb-contact">Contact</a>
+          </nav>
+        </div>
+      </header>
+
+
+      <main role="main" class="inner">
+
+        <section id="jb-home">
+          <div id="jb-me">
+            <img src="img/itsme.jpg" alt="a picture of me" title="Hi! it's me Jess Brisson; your Web Developer">
+          </div>
+            
+          <div class="row jb-header">
+            <div class="col-sm-12">
+              <h1><span>J</span>Brisson</h1>
+            </div>
+          </div>
+
+          <div class="row jb-content">
+            <div class="col-sm-12">
+              <p class="h4">Web Development that exceeds expectations.</p>
+              <p>Backend PHP Development with Laravel, WordPress, or Custom PHP/NodeJS.
+                <br>Frontend Solutions with modern JavaScript, VueJS, jQuery, HTML, CSS, Bootstrap.
+                <br>
+                <br><strong>Are you looking for a custom website or web solution?</strong></p>
+            </div>
+          </div>
+        </section>
+
+
+        <section id="jb-about">
+
+          <div class="row jb-header">
+            <div class="col-sm-12">
+              <h2>About</h2>
+            </div>
+          </div>
+
+          <div class="row jb-content">
+            <div class="col-sm-8 offset-sm-2">
+              <p>My name is Jess Brisson, I'm an experienced Web Developer with many facets. Since 2015 I've made and maintained over 40 business websites, custom web applications, and services for many business needs.</p>
+              <p><strong>If you are looking for a website or a custom solution for your business, please do reach out.</strong></p>
+            </div>
+          </div>
+
+        </section>
+
+
+        <section id="jb-services">
+
+          <div class="row jb-header">
+            <div class="col-sm-12">
+                <h2>Services</h2>
+            </div>
+          </div>
+
+          <div class="row jb-content">
+            <div class="col-lg-4">
+              <div>
+                <h3>PHP Backend Development (Laravel, WordPress, Databases, Custom)</h3>
+              </div>
+            </div>
+            <div class="col-lg-4">
+              <div>
+                <h3>Frontend Development with JavaScript(VueJS, jQuery), HTML, CSS(SCSS)</h3>
+              </div>
+            </div>
+            <div class="col-lg-4">
+              <div>
+                <h3>Custom Solutions, Maintenance, API's, Micro/Mono Services</h3>
+              </div>
+            </div>
+          </div>
+
+        </section>
+
+
+        <section id="jb-contact">
+
+          <div class="row jb-header">
+            <div class="col-sm-12">
+              <h2>Contact</h2>
+            </div>
+          </div>
+
+          <div class="row jb-content">
+            <div class="col-sm-12">
+              <h3><a href="mailto:jessbrisson@gmail.com">jessbrisson@gmail.com</a></h3>
+              <!-- <form action="">
+                <div class="form-group">
+                  <input type="text" placeholder="name" class="form-control form-control-lg">
+                </div>
+                <div class="form-group">
+                  <input type="email" placeholder="email" class="form-control form-control-lg">
+                </div>
+                <div class="form-group">
+                  <input type="phone" placeholder="phone" class="form-control form-control-lg">
+                </div>
+                <input type="submit" class="btn btn-lg btn-dark" value="submit">
+              </form> -->
+            </div>
+          </div>
+
+        </section>
+
+        
+      </main>
+
+      <footer class="mastfoot mt-auto">
+      </footer>
+    </div>
+
+    <script src="./js/main.js"></script>
   </body>
 </html>
