--- a/index.html
+++ b/index.html
@@ -96,12 +96,12 @@
             </div>
             <div class="col-lg-4">
               <div>
-                <h3>Frontend Development with JavaScript(VueJS, jQuery), HTML, CSS(SCSS)</h3>
+                <h3>Frontend Development with JavaScript(Vanilla, VueJS, jQuery), HTML, CSS(SCSS)</h3>
               </div>
             </div>
             <div class="col-lg-4">
               <div>
-                <h3>Custom Solutions, Maintenance, API's, Micro/Mono Services</h3>
+                <h3>Custom Solutions, Maintenance, API's, Micro Services, Web Design</h3>
               </div>
             </div>
           </div>
@@ -144,6 +144,7 @@
       </footer>
     </div>
 
-    <script src="./js/main.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.26.0/babel.min.js"></script>
+    <script src="./js/main.js" type="text/babel"></script>
   </body>
 </html>
