remove babel, add ES6 disclaimer

--- a/index.html
+++ b/index.html
@@ -141,10 +141,15 @@
       </main>
 
       <footer class="mastfoot mt-auto">
+        <div class="row">
+          <div class="col">
+            <p><small>This site was created with modern(ES6) JavaScript. If you are experiencing issues please use an upgraded browser.</small></p>
+            <p><small><span class="jb-date"></span> | Jess Brisson</small></p>
+          </div>
+        </div>
       </footer>
     </div>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.26.0/babel.min.js"></script>
-    <script src="./js/main.js" type="text/babel"></script>
+    <script src="./js/main.js"></script>
   </body>
 </html>
