--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
               <p class="h4">Web Development that exceeds expectations.</p>
               <p>Backend PHP Development with Laravel, WordPress, or Custom PHP/NodeJS.
                 <br>Frontend Solutions with modern JavaScript, VueJS, jQuery, HTML, CSS, Bootstrap.
+                <br>Custom website and UI layouts/design.
                 <br>
                 <br><strong>Are you looking for a custom website or web solution?</strong></p>
             </div>
@@ -101,7 +102,7 @@
             </div>
             <div class="col-lg-4">
               <div>
-                <h3>Custom Solutions, Maintenance, API's, Micro Services, Web Design</h3>
+                <h3>Custom Solutions, Maintenance, API's, Micro Services, Web/UI Design</h3>
               </div>
             </div>
           </div>
