--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
               <p class="h4">Web Development that exceeds expectations.</p>
               <p>Backend PHP Development with Laravel, WordPress, or Custom PHP/NodeJS.
                 <br>Frontend Solutions with modern JavaScript, VueJS, jQuery, HTML, CSS, Bootstrap.
-                <br>Custom website and UI layouts/design.
+                <br>Website/UI design.
                 <br>
                 <br><strong>Are you looking for a custom website or web solution?</strong></p>
             </div>
