--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <div class="col-sm-12">
               <p class="h4">Web Development that exceeds expectations.</p>
               <p>Backend PHP Development with Laravel, WordPress, or Custom PHP/NodeJS.
-                <br>Frontend Solutions with modern JavaScript, VueJS, jQuery, HTML, CSS, Bootstrap.
+                <br>Frontend Solutions with modern JavaScript, VueJS, Lodash, jQuery, HTML, CSS, Bootstrap.
                 <br>Website/UI design.
                 <br>
                 <br><strong>Are you looking for a custom website or web solution?</strong></p>
