--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <div class="col-sm-12">
               <p class="h4">Web Development that exceeds expectations.</p>
               <p>Backend PHP Development with Laravel, WordPress, or Custom PHP/NodeJS.
-                <br>Frontend Solutions with modern JavaScript, VueJS, Lodash, jQuery, HTML, CSS, Bootstrap.
+                <br>Frontend Solutions with modern JavaScript, VueJS, Lodash, HTML, CSS/SCSS, Bootstrap.
                 <br>Website/UI design.
                 <br>
                 <br><strong>Are you looking for a custom website or web solution?</strong></p>
@@ -97,7 +97,7 @@
             </div>
             <div class="col-lg-4">
               <div>
-                <h3>Frontend Development with JavaScript(Vanilla, VueJS, jQuery), HTML, CSS(SCSS)</h3>
+                <h3>Frontend Development with JavaScript(ES5/6, VueJS, Lodash, etc.), HTML, CSS(SCSS)</h3>
               </div>
             </div>
             <div class="col-lg-4">
