--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <div class="col-sm-12">
               <p class="h4">Web Development that exceeds expectations.</p>
               <p>Backend PHP Development with Laravel, WordPress, or Custom PHP/NodeJS.
-                <br>Frontend Solutions with modern JavaScript, VueJS, Lodash, HTML, CSS/SCSS, Bootstrap.
+                <br>Frontend Solutions with modern JavaScript, Vue.js, Lodash, HTML, CSS/SCSS, Bootstrap.
                 <br>Website/UI design.
                 <br>
                 <br><strong>Are you looking for a custom website or web solution?</strong></p>
@@ -103,7 +103,7 @@
             </div>
             <div class="col-lg-4">
               <div>
-                <h3>Frontend Development with JavaScript(ES5/6, VueJS, Lodash, etc.), HTML, CSS(SCSS)</h3>
+                <h3>Frontend Development with JavaScript(ES5/6, Vue.js, Lodash, etc.), HTML, CSS(SCSS)</h3>
               </div>
             </div>
             <div class="col-lg-4">
@@ -151,13 +151,13 @@
       <footer class="mastfoot mt-auto">
         <div class="row">
           <div class="col">
-            <p><small>This site was created with modern(ES6) JavaScript and VueJS. If you are experiencing issues please use an upgraded browser.</small></p>
+            <p><small>This site was created with modern(ES6) JavaScript and Vue.js. If you are experiencing issues please use an upgraded browser.</small></p>
             <p><small><span class="jb-date">{{ theYear }}</span> | Jess Brisson</small></p>
           </div>
         </div>
       </footer>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/vue"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue@2.6.10/dist/vue.js"></script>
     <script src="./js/main.js"></script>
   </body>
 </html>
