update order of languages listed to be consistent

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="author" content="">
     <link rel="icon" href="/favicon.ico">
 
-    <title>Jess Brisson | Python | PHP | JavaScript </title>
+    <title>Jess Brisson | PHP | Python | JavaScript </title>
 
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400" rel="stylesheet">
 
@@ -62,7 +62,7 @@
           <div class="row jb-content">
             <div class="col-sm-12">
                 <p class="h4">Web Development that exceeds expectations.</p>
-                <p>Backend Development with Python, PHP, or NodeJS. Relational Database Development and Management.
+                <p>Backend Development with PHP, Python, or NodeJS. Relational Database Development and Management.
                 <br>Frontend Solutions with modern JavaScript, React.js, Vue.js, HTML5, CSS/SCSS, Bootstrap.
                 <br>Website/UI design.
                 <br>
@@ -102,7 +102,7 @@
           <div class="row jb-content">
             <div class="col-lg-4">
               <div>
-                <h3>PHP/Python Backend Development + Relational Database Development/Management</h3>
+                <h3>PHP/Python/NodeJS Backend Development + Relational Database Development/Management</h3>
               </div>
             </div>
             <div class="col-lg-4">
