--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             </div>
             <div class="col-lg-4">
               <div>
-                <h3>Custom Solutions, Maintenance, API's, Micro Services, Web/UI Design</h3>
+                <h3>Custom Solutions, Maintenance, API's, Microservices, Web/UI Design</h3>
               </div>
             </div>
           </div>
