update tech stack I currently work with

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="author" content="">
     <link rel="icon" href="/favicon.ico">
 
-    <title>Jess Brisson | PHP | Python | JavaScript </title>
+    <title>Jess Brisson | Java | JavaScript </title>
 
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400" rel="stylesheet">
 
@@ -61,12 +61,12 @@
 
           <div class="row jb-content">
             <div class="col-sm-12">
-                <p class="h4">Web Development that exceeds expectations.</p>
-                <p>Backend Development with PHP, Python, or NodeJS. Relational Database Development and Management.
-                <br>Frontend Solutions with modern JavaScript, React.js, Vue.js, HTML5, CSS/SCSS, Bootstrap.
+                <p class="h4">Coffee-Stack development(Java/JavaScript) that scales.</p>
+                <p>Backend Development with Java and other JVM Languages. Relational Database Development and Management.
+                <br>Frontend Solutions with modern JavaScript, React.js, Vue.js, HTML5, CSS/SCSS.
                 <br>Website/UI design.
                 <br>
-                <br><strong>Are you looking for a custom website or web solution?</strong></p>
+                <br><strong>I am currently unavailable. Thank you for looking at my website.</strong></p>
             </div>
           </div>
 
@@ -84,7 +84,6 @@
           <div class="row jb-content">
             <div class="col-sm-8 offset-sm-2">
               <p>My name is Jess Brisson, I'm an experienced Web Developer with many facets. Since 2015 I've made and maintained various websites, custom web applications, and services for many business needs.</p>
-              <p><strong>If you are looking for a website or a custom solution for your business, please do reach out.</strong></p>
             </div>
           </div>
 
@@ -102,7 +101,7 @@
           <div class="row jb-content">
             <div class="col-lg-4">
               <div>
-                <h3>PHP/Python/NodeJS Backend Development + Relational Database Development/Management</h3>
+                <h3>Java Backend Development + Relational Database Development/Management</h3>
               </div>
             </div>
             <div class="col-lg-4">
@@ -132,18 +131,6 @@
             <div class="col-sm-12">
               <input type="checkbox" @change="emailHoneypot" :disabled="!emailActive">
               <h3 v-if="emailActive"><a href="mailto:jessbrisson@gmail.com">jessbrisson@gmail.com</a></h3>
-              <!-- <form action="">
-                <div class="form-group">
-                  <input type="text" placeholder="name" class="form-control form-control-lg">
-                </div>
-                <div class="form-group">
-                  <input type="email" placeholder="email" class="form-control form-control-lg">
-                </div>
-                <div class="form-group">
-                  <input type="phone" placeholder="phone" class="form-control form-control-lg">
-                </div>
-                <input type="submit" class="btn btn-lg btn-dark" value="submit">
-              </form> -->
             </div>
           </div>
 
