change web developer to web applications developer

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
           <div class="row jb-content">
             <div class="col-sm-8 offset-sm-2">
-              <p>My name is Jess Brisson, I'm an experienced Web Developer with many facets. Since 2015 I've made and maintained various websites, custom web applications, and services for many business needs.</p>
+              <p>My name is Jess Brisson, I'm an experienced Web Applications Developer with many facets. Since 2015 I've made and maintained various websites, custom web applications, and services for many business needs.</p>
             </div>
           </div>
 
