--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="author" content="">
     <link rel="icon" href="/favicon.ico">
 
-    <title>Jess Brisson | Java | JavaScript </title>
+    <title>Jess Brisson | JavaScript Developer </title>
 
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400" rel="stylesheet">
 
@@ -50,7 +50,7 @@
         <section id="jb-top" ref="jbTop">
 
           <div id="jb-me">
-            <img src="img/itsme.jpg" alt="a picture of me" title="Hi! it's me Jess Brisson; your Web Developer">
+            <img src="img/itsme.jpg" alt="a picture of me" title="Hi! it's me Jess Brisson">
           </div>
             
           <div class="row jb-header">
@@ -61,9 +61,9 @@
 
           <div class="row jb-content">
             <div class="col-sm-12">
-                <p class="h4">Coffee-Stack development(Java/JavaScript) that scales.</p>
-                <p>Backend Development with Java and other JVM Languages. Relational Database Development and Management.
-                <br>Frontend Solutions with modern JavaScript, React.js, Vue.js, HTML5, CSS/SCSS.
+                <p class="h4">JavaScript development that scales.</p>
+                <p>Frontend Solutions with modern JavaScript, React.js, Vue.js, HTML5, CSS/SCSS.
+                <br>Backend Development with NodeJS, or Java and other JVM Languages. Relational Database Development and Management.
                 <br>Website/UI design.
                 <br>
                 <br><strong>I am currently unavailable. Thank you for looking at my website.</strong></p>
@@ -101,12 +101,12 @@
           <div class="row jb-content">
             <div class="col-lg-4">
               <div>
-                <h3>Java Backend Development + Relational Database Development/Management</h3>
+                <h3>Frontend Development with JavaScript(React.js, Vue.js, Lodash, etc.), HTML, CSS(SCSS)</h3>
               </div>
             </div>
             <div class="col-lg-4">
               <div>
-                <h3>Frontend Development with JavaScript(ES5/6, React.js, Vue.js, Lodash, etc.), HTML, CSS(SCSS)</h3>
+                <h3>Backend Development with NodeJS or Java + Relational Database Development/Management</h3>
               </div>
             </div>
             <div class="col-lg-4">
