--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <div class="col-sm-12">
                 <p class="h4">JavaScript development that scales.</p>
                 <p>Frontend Solutions with modern JavaScript, React.js, Vue.js, HTML5, CSS/SCSS.
-                <br>Backend Development with NodeJS, or Java and other JVM Languages. Relational Database Development and Management.
+                <br>Backend Development with Node.js. Relational Database Development and Management.
                 <br>Website/UI design.
                 <br>
                 <br><strong>I am currently unavailable. Thank you for looking at my website.</strong></p>
@@ -106,7 +106,7 @@
             </div>
             <div class="col-lg-4">
               <div>
-                <h3>Backend Development with NodeJS or Java + Relational Database Development/Management</h3>
+                <h3>Backend Development with Node.js + Relational Database Development/Management</h3>
               </div>
             </div>
             <div class="col-lg-4">
