Adjust update status and skills

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="author" content="">
     <link rel="icon" href="/favicon.ico">
 
-    <title>Jess Brisson | JavaScript Developer </title>
+    <title>Jess Brisson | Web Applications/Site Developer </title>
 
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400" rel="stylesheet">
 
@@ -61,12 +61,12 @@
 
           <div class="row jb-content">
             <div class="col-sm-12">
-                <p class="h4">JavaScript development that scales.</p>
-                <p>Frontend Solutions with modern JavaScript, React.js, Vue.js, HTML5, CSS/SCSS.
-                <br>Backend Development with Node.js. Relational Database Development and Management.
+                <p class="h4">Web Application/Site development that scales.</p>
+                <p>Frontend Solutions with modern JavaScript, React.js, Vue.js, HTML5, CSS(SCSS, Bootstrap).
+                <br>Backend Development with PHP(Laravel), Node.js(Express), and Java. Relational Database Development and Management.
                 <br>Website/UI design.
                 <br>
-                <br><strong>I am currently unavailable. Thank you for looking at my website.</strong></p>
+                <p>~ Currently Available ~</p>
             </div>
           </div>
 
@@ -83,7 +83,7 @@
 
           <div class="row jb-content">
             <div class="col-sm-8 offset-sm-2">
-              <p>My name is Jess Brisson, I'm an experienced Web Applications Developer with many facets. Since 2015 I've made and maintained various websites, custom web applications, and services for many business needs.</p>
+              <p>My name is Jess Brisson, I'm an experienced Web Applications and Site Developer with many facets. Since 2015 I've made and maintained various websites, custom web applications, and services for many business needs.</p>
             </div>
           </div>
 
@@ -101,12 +101,12 @@
           <div class="row jb-content">
             <div class="col-lg-4">
               <div>
-                <h3>Frontend Development with JavaScript(React.js, Vue.js, Lodash, etc.), HTML, CSS(SCSS)</h3>
+                <h3>Frontend Development with JavaScript(React.js, Vue.js, Lodash, AngularJS, etc.), HTML, CSS(SCSS, Bootstrap)</h3>
               </div>
             </div>
             <div class="col-lg-4">
               <div>
-                <h3>Backend Development with Node.js + Relational Database Development/Management</h3>
+                <h3>Backend Development with PHP(Laravel), Node.js(Express), Java, and Relational Database Development/Management</h3>
               </div>
             </div>
             <div class="col-lg-4">
