Remove tilde' add strong

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 <br>Backend Development with PHP(Laravel), Node.js(Express), and Java. Relational Database Development and Management.
                 <br>Website/UI design.
                 <br>
-                <p>~ Currently Available ~</p>
+                <p><strong>Currently Available</strong></p>
             </div>
           </div>
 
