--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <div class="col-sm-12">
                 <p class="h4">Web Application/Site development that scales.</p>
                 <p>Frontend Solutions with modern JavaScript, React.js, Vue.js, HTML5, CSS(SCSS, Bootstrap).
-                <br>Backend Development with PHP(Laravel), Node.js(Express), and Java. Relational Database Development and Management.
+                <br>Backend Development with PHP(Laravel), and Node.js(Express). Relational Database Development and Management.
                 <br>Website/UI design.
                 <br>
                 <p><strong>Currently Available</strong></p>
@@ -106,7 +106,7 @@
             </div>
             <div class="col-lg-4">
               <div>
-                <h3>Backend Development with PHP(Laravel), Node.js(Express), Java, and Relational Database Development/Management</h3>
+                <h3>Backend Development with PHP(Laravel), Node.js(Express), and Relational Database Development/Management</h3>
               </div>
             </div>
             <div class="col-lg-4">
