Add Java, remove PHP and Node.js
Java is my main focus these days, I have put it front and center as the main technology(stack) I work with.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="author" content="">
     <link rel="icon" href="/favicon.ico">
 
-    <title>Jess Brisson | Web Applications/Site Developer </title>
+    <title>Jess Brisson | Web Applications/API Developer </title>
 
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400" rel="stylesheet">
 
@@ -62,11 +62,10 @@
           <div class="row jb-content">
             <div class="col-sm-12">
                 <p class="h4">Web Application/Site development that scales.</p>
-                <p>Frontend Solutions with modern JavaScript, React.js, Vue.js, HTML5, CSS(SCSS, Bootstrap).
-                <br>Backend Development with PHP(Laravel), and Node.js(Express). Relational Database Development and Management.
-                <br>Website/UI design.
+                <p>MVC and API Development with Java in Spring/Boot or Struts. Relational Database Development and Management.
+                <br>Frontend Solutions with modern JavaScript, React.js, Vue.js, HTML5, CSS(SCSS, Bootstrap).
                 <br>
-                <p><strong>Currently Available</strong></p>
+                <p><strong>Currently Unavailable</strong></p>
             </div>
           </div>
 
@@ -83,7 +82,7 @@
 
           <div class="row jb-content">
             <div class="col-sm-8 offset-sm-2">
-              <p>My name is Jess Brisson, I'm an experienced Web Applications and Site Developer with many facets. Since 2015 I've made and maintained various websites, custom web applications, and services for many business needs.</p>
+              <p>My name is Jess Brisson, I'm an experienced Web Applications and API Developer with many facets. Since 2015 I've made and maintained various websites, custom web applications, and services/API's for many business needs.</p>
             </div>
           </div>
 
@@ -101,17 +100,17 @@
           <div class="row jb-content">
             <div class="col-lg-4">
               <div>
-                <h3>Frontend Development with JavaScript(React.js, Vue.js, Lodash, AngularJS, etc.), HTML, CSS(SCSS, Bootstrap)</h3>
+                <h3>Backend MVC and API development with Java(Spring/Boot, Struts), and Relational Database Development/Management</h3>
               </div>
             </div>
             <div class="col-lg-4">
               <div>
-                <h3>Backend Development with PHP(Laravel), Node.js(Express), and Relational Database Development/Management</h3>
+                <h3>Frontend Development with JavaScript(React.js, Vue.js, Lodash, etc.), HTML, CSS(SCSS, Bootstrap)</h3>
               </div>
             </div>
             <div class="col-lg-4">
               <div>
-                <h3>Custom Solutions, Maintenance, API's, Microservices, Web/UI Design</h3>
+                <h3>Custom Solutions, DevOps Assistance, App Maintenance, Microservices</h3>
               </div>
             </div>
           </div>
