--- a/index.html
+++ b/index.html
@@ -62,10 +62,9 @@
           <div class="row jb-content">
             <div class="col-sm-12">
                 <p class="h4">Web Application/Site development that scales.</p>
-                <p>MVC and API Development with Java in Spring/Boot or Struts. Relational Database Development and Management.
-                <br>Frontend Solutions with modern JavaScript, React.js, Vue.js, HTML5, CSS(SCSS, Bootstrap).
+                <p>API Development with Java and Python. Relational Database Development and Management.
+                <br>Frontend Solutions with modern JavaScript, HTML5, CSS(SCSS, Bootstrap).
                 <br>
-                <p><strong>Currently Unavailable</strong></p>
             </div>
           </div>
 
@@ -100,7 +99,7 @@
           <div class="row jb-content">
             <div class="col-lg-4">
               <div>
-                <h3>Backend MVC and API development with Java(Spring/Boot, Struts), and Relational Database Development/Management</h3>
+                <h3>Backend MVC and API development with Java(Spring/Boot, Struts), Python(Flask), and Relational Database Development/Management</h3>
               </div>
             </div>
             <div class="col-lg-4">
