Add Angular to frontend framework list

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             </div>
             <div class="col-lg-4">
               <div>
-                <h3>Frontend Development with JavaScript(React.js, Vue.js, Lodash, etc.), HTML, CSS(SCSS, Bootstrap)</h3>
+                <h3>Frontend Development with JavaScript(Angular, React.js, Vue.js, Lodash, etc.), HTML, CSS(SCSS, Bootstrap)</h3>
               </div>
             </div>
             <div class="col-lg-4">
