update target interests

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           <div class="row jb-content">
             <div class="col-sm-12">
                 <p class="h4">Web Application/Site development that scales.</p>
-                <p>API Development with Java and Kotlin. Relational Database Development and Management.
+                <p>API Development with Java/Kotlin and Spring Boot or Node.js with Express.
                 <br>Frontend Solutions with modern JavaScript, HTML5, CSS(SCSS, Bootstrap).
                 <br>
             </div>
@@ -99,12 +99,12 @@
           <div class="row jb-content">
             <div class="col-lg-4">
               <div>
-                <h3>Backend MVC and API development with Java/Kotlin(Spring/Boot, Struts), Python(Flask), and Relational Database Development/Management</h3>
+                <h3>Backend MVC and API development with Java/Kotlin(Spring/Boot, Struts), Node.js(Express), and Relational Database Development/Management</h3>
               </div>
             </div>
             <div class="col-lg-4">
               <div>
-                <h3>Frontend Development with JavaScript(Angular, React.js, Vue.js, Lodash, etc.), HTML, CSS(SCSS, Bootstrap)</h3>
+                <h3>Frontend Development with JavaScript(TypeScript, React.js, Vue.js, Angular, etc.), HTML, CSS(SCSS, Bootstrap)</h3>
               </div>
             </div>
             <div class="col-lg-4">
