add Go back into the mix

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           <div class="row jb-content">
             <div class="col-sm-12">
                 <p class="h4">Web Application/Site development that scales.</p>
-                <p>API Development with Java/Kotlin and Spring Boot or Node.js with Express.
+                <p>Microservice and API Development with Go(lang), Java/Kotlin with Spring Boot or Node.js with Express.
                 <br>Frontend Solutions with modern JavaScript, HTML5, CSS(SCSS, Bootstrap).
                 <br>
             </div>
@@ -99,7 +99,7 @@
           <div class="row jb-content">
             <div class="col-lg-4">
               <div>
-                <h3>Backend MVC and API development with Java/Kotlin(Spring/Boot, Struts), Node.js(Express), and Relational Database Development/Management</h3>
+                <h3>Backend MVC and API development with Go(lang), Java/Kotlin(Spring/Boot, Struts), Node.js(Express)</h3>
               </div>
             </div>
             <div class="col-lg-4">
@@ -109,7 +109,7 @@
             </div>
             <div class="col-lg-4">
               <div>
-                <h3>Custom Solutions, DevOps Assistance, App Maintenance, Microservices</h3>
+                <h3>Microservices, Relational Database Development, App Maintenance, Third Party Integration</h3>
               </div>
             </div>
           </div>
