bring frontend to the forefront, fix p tag.

--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
           <div class="row jb-content">
             <div class="col-sm-12">
                 <p class="h4">Web Application/Site development that scales.</p>
-                <p>Microservice and API Development with Go(lang), Java/Kotlin with Spring Boot or Node.js with Express.
-                <br>Frontend Solutions with modern JavaScript, HTML5, CSS(SCSS, Bootstrap).
+                <p>Frontend Solutions with JavaScript/TypeScript, React, SCSS, Material UI, and more.</p>
+                <p>Microservice and API Development with Java/Kotlin with Spring Boot or Node.js with Express.</p>
                 <br>
             </div>
           </div>
@@ -99,12 +99,12 @@
           <div class="row jb-content">
             <div class="col-lg-4">
               <div>
-                <h3>Backend MVC and API development with Go(lang), Java/Kotlin(Spring/Boot, Struts), Node.js(Express)</h3>
+                <h3>Frontend Development with JavaScript(TypeScript, React, Vue.js, Angular, etc.), HTML(JSX), CSS(SCSS, Material UI)</h3>
               </div>
             </div>
             <div class="col-lg-4">
               <div>
-                <h3>Frontend Development with JavaScript(TypeScript, React.js, Vue.js, Angular, etc.), HTML, CSS(SCSS, Bootstrap)</h3>
+                <h3>Backend MVC and API development with Java/Kotlin(Spring Boot), Node.js(Express)</h3>
               </div>
             </div>
             <div class="col-lg-4">
