Add go to list of languages

--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
 
           <div class="row jb-content">
             <div class="col-sm-12">
-                <p class="h4">Web Application/Site development that scales.</p>
+                <p class="h4">Web Application/API development that scales.</p>
                 <p>Frontend Solutions with JavaScript/TypeScript, React, SCSS, Material UI, and more.</p>
-                <p>Microservice and API Development with Java/Kotlin with Spring Boot or Node.js with Express.</p>
+                <p>API/Microservice Development with Go and Node.js + Express.</p>
                 <br>
             </div>
           </div>
@@ -99,12 +99,12 @@
           <div class="row jb-content">
             <div class="col-lg-4">
               <div>
-                <h3>Frontend Development with JavaScript(TypeScript, React, Vue.js, Angular, etc.), HTML(JSX), CSS(SCSS, Material UI)</h3>
+                <h3>Frontend Development with JavaScript(TypeScript + React), HTML(JSX), CSS(SCSS, Material UI)</h3>
               </div>
             </div>
             <div class="col-lg-4">
               <div>
-                <h3>Backend MVC and API development with Java/Kotlin(Spring Boot), Node.js(Express)</h3>
+                <h3>Backend MVC and API development with Go, and Node.js(Express)</h3>
               </div>
             </div>
             <div class="col-lg-4">
@@ -140,7 +140,7 @@
       <footer class="mastfoot mt-auto">
         <div class="row">
           <div class="col">
-            <p><small>This site was created with modern(ES6) JavaScript and Vue.js. If you are experiencing issues please use an upgraded browser.</small></p>
+            <p><small>This site was created with modern(ES6) JavaScript and Vue.js. If you are experiencing issues please view in an upgraded browser.</small></p>
             <p><small><span class="jb-date">{{ theYear }}</span> | Jess Brisson</small></p>
           </div>
         </div>
